# python-webservice-template

./: README.rst  pyproject.toml
.github/: README.md
development/: setup-environment
repository-setup/: rehome-repository
source/service/: service_main.py
source/service/restapis/versions/v1/: __init__.py
source/service/restapis/versions/v1/feature/: examples.py
source/service/website/static/: README.md
source/service/website/templates/: README.md
source/testroots/: README.md
source/testroots/testbase/: __testroot__.py
workspaces/: default-workspace.template
