[tool.poetry]
name = "<package name>"
description = "<package description>"
version = "0.0.1"
authors = []
readme = "README.md"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = ">=3.0.3"
flask-restx = ">=1.3.0"
gunicorn = ">=22.0.0"
flask-oidc = ">=2.1.1"
okta = ">=2.9.5"
mojo-runtime = ">=1.3.15"

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
